unpackaged/main/default/objects/Service__c/fields/Account_Manager2__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager2__c</fullName>
    <formula>Account__r.Account_Manager__r.FirstName &amp;&quot; &quot;&amp;  Account__r.Account_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Success Manager</label>
    <type>Text</type>
</CustomField>