unpackaged/main/default/objects/Service__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>[SYSTEM] Client Success Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Services4_del</relationshipName>
    <type>Lookup</type>
</CustomField>