unpackaged/main/default/objects/Service__c/fields/Active_MLS_Board__c.field-meta.xml
<CustomField>
    <fullName>Active_MLS_Board__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active MLS Board</label>
    <type>Checkbox</type>
</CustomField>