unpackaged/main/default/objects/Service__c/fields/Active_Owner__c.field-meta.xml
<CustomField>
    <fullName>Active_Owner__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Owner</label>
    <type>Checkbox</type>
</CustomField>