unpackaged/main/default/objects/Service__c/fields/Ad_Type__c.field-meta.xml
<CustomField>
    <fullName>Ad_Type__c</fullName>
    <label>Ad Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>