unpackaged/main/default/objects/Service__c/fields/Additional_Jira_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Additional_Jira_Tickets__c</fullName>
    <inlineHelpText>Additional Jira Tickets</inlineHelpText>
    <label>Outstanding Jira/Support Tickets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>