unpackaged/main/default/objects/Service__c/fields/Ads_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Ads_Go_Live_Date__c</fullName>
    <label>Ads Go Live Date</label>
    <type>DateTime</type>
</CustomField>