unpackaged/main/default/objects/Service__c/fields/AE__c.field-meta.xml
<CustomField>
    <fullName>AE__c</fullName>
    <formula>Opportunity__r.AE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE</label>
    <type>Text</type>
</CustomField>