unpackaged/main/default/objects/Service__c/fields/AE_AS__c.field-meta.xml
<CustomField>
    <fullName>AE_AS__c</fullName>
    <formula>Opportunity__r.AE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE/AS</label>
    <type>Text</type>
</CustomField>