unpackaged/main/default/objects/Service__c/fields/Agent_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Agent_Contact_Email__c</fullName>
    <label>Agent Contact Email</label>
    <type>Email</type>
</CustomField>