unpackaged/main/default/objects/Service__c/fields/Agent_signature__c.field-meta.xml
<CustomField>
    <fullName>Agent_signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agent signature</label>
    <type>Checkbox</type>
</CustomField>