unpackaged/main/default/objects/Service__c/fields/Any_additional_notes__c.field-meta.xml
<CustomField>
    <fullName>Any_additional_notes__c</fullName>
    <inlineHelpText>Any additional notes you think the AM should know about the client or the account?</inlineHelpText>
    <label>Additional Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>