unpackaged/main/default/objects/Service__c/fields/Are_all_videos_Youtube_Vimeo_links__c.field-meta.xml
<CustomField>
    <fullName>Are_all_videos_Youtube_Vimeo_links__c</fullName>
    <label>Are All Videos Youtube/Vimeo Links</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>