unpackaged/main/default/objects/Service__c/fields/Asana_Notes2__c.field-meta.xml
<CustomField>
    <fullName>Asana_Notes2__c</fullName>
    <label>Asana Notes</label>
    <type>Url</type>
</CustomField>