unpackaged/main/default/objects/Service__c/fields/Asana_Notes_Link__c.field-meta.xml
<CustomField>
    <fullName>Asana_Notes_Link__c</fullName>
    <formula>Account__r.Asana_Notes_LInk__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asana Notes Link</label>
    <type>Text</type>
</CustomField>