unpackaged/main/default/objects/Service__c/fields/Assigned_Internal_Google_Account__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Internal_Google_Account__c</fullName>
    <label>Assigned Internal Google Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>