unpackaged/main/default/objects/Service__c/fields/Assigned_PM_VA__c.field-meta.xml
<CustomField>
    <fullName>Assigned_PM_VA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VA Team Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Servicesh5MD</relationshipName>
    <type>Lookup</type>
</CustomField>