unpackaged/main/default/objects/Service__c/fields/Audit_2__c.field-meta.xml
<CustomField>
    <fullName>Audit_2__c</fullName>
    <label>Audit</label>
    <type>Url</type>
</CustomField>