unpackaged/main/default/objects/Service__c/fields/Audit__c.field-meta.xml
<CustomField>
    <fullName>Audit__c</fullName>
    <label>Audit</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>