unpackaged/main/default/objects/Service__c/fields/Automate__c.field-meta.xml
<CustomField>
    <fullName>Automate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automate</label>
    <type>Checkbox</type>
</CustomField>