unpackaged/main/default/objects/Service__c/fields/Billing_set_up__c.field-meta.xml
<CustomField>
    <fullName>Billing_set_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing set up</label>
    <type>Checkbox</type>
</CustomField>