unpackaged/main/default/objects/Service__c/fields/BOR_Email__c.field-meta.xml
<CustomField>
    <fullName>BOR_Email__c</fullName>
    <label>BOR Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>