unpackaged/main/default/objects/Service__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <formula>IF( ISPICKVAL( Account__r.Tier_Plan__c , &quot;Brand&quot;), &quot;Branded&quot;, 
   
   IF(ISPICKVAL( Account__r.Tier_Plan__c , &quot;Growth&quot;), &quot;Branded + Non Branded&quot;, 
      IF(ISPICKVAL( Account__r.Tier_Plan__c , &quot;Premium&quot;), &quot;Branded + Non Branded&quot;,&quot;&quot;)
      
     )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand</label>
    <type>Text</type>
</CustomField>