unpackaged/main/default/objects/Service__c/fields/Brand_Email_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Brand_Email_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to track whether the post-launch email has been sent to the client. The email is sent immediately once the status is moved, and the field is set to True after the email is successfully triggered.</description>
    <label>Brand Email Tracking</label>
    <type>Checkbox</type>
</CustomField>