unpackaged/main/default/objects/Service__c/fields/Brand_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Brand_Guidelines__c</fullName>
    <label>Brand Guidelines</label>
    <type>Url</type>
</CustomField>