unpackaged/main/default/objects/Service__c/fields/Brand_Tier_IAO_Service_Launched__c.field-meta.xml
<CustomField>
    <fullName>Brand_Tier_IAO_Service_Launched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand Tier: IAO Service Launched</label>
    <type>Checkbox</type>
</CustomField>