unpackaged/main/default/objects/Service__c/fields/Broker_contact_email__c.field-meta.xml
<CustomField>
    <fullName>Broker_contact_email__c</fullName>
    <label>Broker contact email</label>
    <type>Email</type>
</CustomField>