unpackaged/main/default/objects/Service__c/fields/Broker_of_Record_Email__c.field-meta.xml
<CustomField>
    <fullName>Broker_of_Record_Email__c</fullName>
    <formula>Account__r.Broker_Contact_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker of Record Email</label>
    <type>Text</type>
</CustomField>