unpackaged/main/default/objects/Service__c/fields/Broker_signature__c.field-meta.xml
<CustomField>
    <fullName>Broker_signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Broker signature</label>
    <type>Checkbox</type>
</CustomField>