unpackaged/main/default/objects/Service__c/fields/Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Brokerage__c</fullName>
    <label>Brokerage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>