unpackaged/main/default/objects/Service__c/fields/Buildout_Type__c.field-meta.xml
<CustomField>
    <fullName>Buildout_Type__c</fullName>
    <label>Buildout Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net new client</fullName>
            </value>
            <value>
                <fullName>Migration from Lead Generation</fullName>
            </value>
            <value>
                <fullName>Migration from On-Demand Ads</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>