unpackaged/main/default/objects/Service__c/fields/Bundle_History_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Bundle_History_Tracking__c</fullName>
    <label>Bundle History Tracking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>