unpackaged/main/default/objects/Service__c/fields/Bundle_Product__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bundle Product?</label>
    <type>Checkbox</type>
</CustomField>