unpackaged/main/default/objects/Service__c/fields/Business_Manager__c.field-meta.xml
<CustomField>
    <fullName>Business_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case Number: 00012032</description>
    <label>Business Manager</label>
    <type>Checkbox</type>
</CustomField>