unpackaged/main/default/objects/Service__c/fields/Campaign_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Status__c</fullName>
    <label>Campaign Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>