unpackaged/main/default/objects/Service__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Churn</fullName>
            </value>
            <value>
                <fullName>Already Migrated</fullName>
            </value>
            <value>
                <fullName>Client Opt-ed out</fullName>
            </value>
            <value>
                <fullName>Already complete, migrate from Hubspot</fullName>
            </value>
            <value>
                <fullName>Reactivation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>