unpackaged/main/default/objects/Service__c/fields/Client_agrees_to_upsell__c.field-meta.xml
<CustomField>
    <fullName>Client_agrees_to_upsell__c</fullName>
    <label>Client agrees to upsell</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>