unpackaged/main/default/objects/Service__c/fields/Client_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Client_Brokerage__c</fullName>
    <formula>Account__r.Brokerage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Brokerage</label>
    <type>Text</type>
</CustomField>