unpackaged/main/default/objects/Service__c/fields/Client_Marketing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Marketing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case #00227779</description>
    <label>Client Marketing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>