unpackaged/main/default/objects/Service__c/fields/Client_notes__c.field-meta.xml
<CustomField>
    <fullName>Client_notes__c</fullName>
    <label>Client notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>