unpackaged/main/default/objects/Service__c/fields/Client_Participation_Level__c.field-meta.xml
<CustomField>
    <fullName>Client_Participation_Level__c</fullName>
    <label>Client Participation Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>