unpackaged/main/default/objects/Service__c/fields/Client_Revision_Count__c.field-meta.xml
<CustomField>
    <fullName>Client_Revision_Count__c</fullName>
    <label>Client Revision Count</label>
    <summaryFilterItems>
        <field>Revision__c.Source__c</field>
        <operation>equals</operation>
        <value>Client Revision</value>
    </summaryFilterItems>
    <summaryForeignKey>Revision__c.Service__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>