unpackaged/main/default/objects/Service__c/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <formula>TEXT( Opportunity__r.Client_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Type</label>
    <type>Text</type>
</CustomField>