unpackaged/main/default/objects/Service__c/fields/Client_website_objective__c.field-meta.xml
<CustomField>
    <fullName>Client_website_objective__c</fullName>
    <label>Client Website Objective</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital Business Card</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Product (Dashboard to make changes)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>