unpackaged/main/default/objects/Service__c/fields/ClientNotes__c.field-meta.xml
<CustomField>
    <fullName>ClientNotes__c</fullName>
    <inlineHelpText>This field allows break between lines, please use this field for client notes</inlineHelpText>
    <label>Client Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>