unpackaged/main/default/objects/Service__c/fields/Clients_pre_launc__c.field-meta.xml
<CustomField>
    <fullName>Clients_pre_launc__c</fullName>
    <inlineHelpText>What was the client&#39;s pre-launch experience? Any escalations or areas of opportunity the AM should know about?</inlineHelpText>
    <label>Client&#39;s Pre-Launch Experience?</label>
    <type>TextArea</type>
</CustomField>