unpackaged/main/default/objects/Service__c/fields/Community_Guide_type__c.field-meta.xml
<CustomField>
    <fullName>Community_Guide_type__c</fullName>
    <label>Community Guide type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Optimized guide</fullName>
            </value>
            <value>
                <fullName>Summary guide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>