unpackaged/main/default/objects/Service__c/fields/Completed_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Completed_Agreement__c</fullName>
    <label>Completed Agreement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>