unpackaged/main/default/objects/Service__c/fields/Completed_MLS_Services__c.field-meta.xml
<CustomField>
    <fullName>Completed_MLS_Services__c</fullName>
    <label>Completed MLS Services</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>