unpackaged/main/default/objects/Service__c/fields/Confirmed_Domain_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Domain_Credentials__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Did you log in to confirm credentials and domain?</inlineHelpText>
    <label>Confirmed Domain Credentials</label>
    <type>Checkbox</type>
</CustomField>