unpackaged/main/default/objects/Service__c/fields/Contact_Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Domain__c</fullName>
    <formula>Account__r.Contact_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email Domain</label>
    <type>Text</type>
</CustomField>