unpackaged/main/default/objects/Service__c/fields/Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_First_Name__c</fullName>
    <formula>Account__r.Broker_Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact First Name</label>
    <type>Text</type>
</CustomField>