unpackaged/main/default/objects/Service__c/fields/Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Last_Name__c</fullName>
    <formula>Account__r.Broker_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Last Name</label>
    <type>Text</type>
</CustomField>