unpackaged/main/default/objects/Service__c/fields/Content_Associate__c.field-meta.xml
<CustomField>
    <fullName>Content_Associate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Content Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Services4</relationshipName>
    <type>Lookup</type>
</CustomField>