unpackaged/main/default/objects/Service__c/fields/Content_Manager__c.field-meta.xml
<CustomField>
    <fullName>Content_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Content Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Services8</relationshipName>
    <type>Lookup</type>
</CustomField>