unpackaged/main/default/objects/Service__c/fields/Content_Status__c.field-meta.xml
<CustomField>
    <fullName>Content_Status__c</fullName>
    <label>Content Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending Questionnaire</fullName>
            </value>
            <value>
                <fullName>Create Content</fullName>
            </value>
            <value>
                <fullName>Final QA</fullName>
            </value>
            <value>
                <fullName>Ready_for_Client_Review</fullName>
                <label>Ready for Client Review</label>
            </value>
            <value>
                <fullName>Sent For Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Posted</fullName>
            </value>
            <value>
                <fullName>Edit Content</fullName>
                <isActive>false</isActive>
                <label>Edit Content</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>