unpackaged/main/default/objects/Service__c/fields/Copilot_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Copilot_Activation_Date__c</fullName>
    <inlineHelpText>Date of when the service is moved from New to Active</inlineHelpText>
    <label>Copilot Activation Date</label>
    <type>Date</type>
</CustomField>