unpackaged/main/default/objects/Service__c/fields/Copywriting_Status__c.field-meta.xml
<CustomField>
    <fullName>Copywriting_Status__c</fullName>
    <inlineHelpText>Have all of the pre-launch copywriting pages been written and added to the site? If not, please provide the status and link the Monday submission</inlineHelpText>
    <label>Copywriting Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>