unpackaged/main/default/objects/Service__c/fields/Copywriting_Usage__c.field-meta.xml
<CustomField>
    <fullName>Copywriting_Usage__c</fullName>
    <inlineHelpText>How were the copywriting pages used on the site, please be as specific as possible</inlineHelpText>
    <label>Copywriting Usage</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>