unpackaged/main/default/objects/Service__c/fields/Core_Engagement_Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Core_Engagement_Other_Reason__c</fullName>
    <description>If Other is selected for why a customer does not reach core engagement, this field is required</description>
    <label>Core Engagement &quot;Other&quot; Reason</label>
    <type>TextArea</type>
</CustomField>