unpackaged/main/default/objects/Service__c/fields/Correct_intro_email_template_was_used__c.field-meta.xml
<CustomField>
    <fullName>Correct_intro_email_template_was_used__c</fullName>
    <inlineHelpText>IAO vs Legacy Onboarding</inlineHelpText>
    <label>Correct intro email template was used?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>