unpackaged/main/default/objects/Service__c/fields/Create_Revision__c.field-meta.xml
<CustomField>
    <fullName>Create_Revision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Revision</label>
    <type>Checkbox</type>
</CustomField>