unpackaged/main/default/objects/Service__c/fields/Create_Subdomain_Sites_Date__c.field-meta.xml
<CustomField>
    <fullName>Create_Subdomain_Sites_Date__c</fullName>
    <label>Create Subdomain Sites Date</label>
    <type>DateTime</type>
</CustomField>