unpackaged/main/default/objects/Service__c/fields/Creative_Brief__c.field-meta.xml
<CustomField>
    <fullName>Creative_Brief__c</fullName>
    <label>Creative Brief</label>
    <type>Url</type>
</CustomField>