unpackaged/main/default/objects/Service__c/fields/Creative_Direction__c.field-meta.xml
<CustomField>
    <fullName>Creative_Direction__c</fullName>
    <inlineHelpText>This field will contain a coda doc link.</inlineHelpText>
    <label>Creative Direction</label>
    <type>Url</type>
</CustomField>