unpackaged/main/default/objects/Service__c/fields/Credit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Credit_Reason__c</fullName>
    <label>Credit Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>