unpackaged/main/default/objects/Service__c/fields/Current_Domain2__c.field-meta.xml
<CustomField>
    <fullName>Current_Domain2__c</fullName>
    <formula>Opportunity__r.Current_domain__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the current domain from the opportunity</inlineHelpText>
    <label>Current Domain</label>
    <type>Text</type>
</CustomField>