unpackaged/main/default/objects/Service__c/fields/Current_domain__c.field-meta.xml
<CustomField>
    <fullName>Current_domain__c</fullName>
    <formula>Opportunity__r.Current_domain__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current domain</label>
    <type>Text</type>
</CustomField>